4.5 -> 5.0:
    - rse: upgrade lua/local/lrexlib.c from version 1.x (nov00-06oct03) to latest version 1.19 (may04-18dec04)
    - jbj: teach headerGetExtension() to lookup extensions.
    - jbj: chain through new headerCompundFormats.
    - jbj: refactor most header extensions from -lrpm to -lrpmdb. heh, no filenames, very sick and sad.
    - jbj: add headerGetExtension(), mapped to gud old stuff for now.
    - jbj: skeletal configgery for standalone index tables.
    - jbj: another header-extension-less hack-a-round.
    - jbj: hack up a NVRA retrival w/o extensions, sigh.
    - jbj: add RPMTAG_NVRA header extension.
    - jbj: python ds.Uname getter for uname(...) dependencies.
    - jbj: use rpmmg magic wrapper.
    - jbj: add rpmmg magic wrapper.
    - jbj: unsnarl __FUNCTION__ from system.h AutoFu.
    - rse: make sure RPM is also linked against libm if external Lua is used (as liblua required libm)
    - rse: support building against PCRE for its regcomp(3) emulation API pcreposix(3) -- used by RPM internally
    - rse: support building against PCRE for its native API pcre(3) -- used by the Lua "rex" extension library
    - jbj: query w/o lead/sigh w newmagic (using --nolead --nosigh --newmagic).
    - jbj: query of packages w/o lead/sigh (using --nolead --nosigh).
    - jbj: query of packages w/o lead (using --nolead).
    - jbj: --newmagic enabler to add new signature/metadata magic to headers.
    - jbj: nobrainer --nolead & --nosigh disablers.
    - jbj: get rid of convertdb1.
    - jbj: HEADER_MAGIC_YES always: remove the enum and arguments everywhere.
    - jbj: HEADER_MAGIC_YES always: eliminate HEADER_MAGIC_NO usages.
    - rse: provide support for GNU binutils ld(1)'s --as-needed via Autoconf option --enable-build-maxextlibdep
    - jbj: rip CentOS3/x86_64 gcc-3.2.3-49.x86_64 hack-a-round. Fix gcc!
    - jbj: upgrade to db-4.6.18.
    - rse: drop MARK64 hack as it isn't RPM's business to decide for lib64 -- for this there is Autoconf option --libdir