@@ -1,4 +1,6 @@
 4.5 -> 5.0:
+    - jbj: use headerGetExtension() for mire matching. memleaks next.
+    - jbj: compute extension cache index correctly with chained tables.
     - rse: upgrade lua/local/lrexlib.c from version 1.x (nov00-06oct03) to latest version 1.19 (may04-18dec04)
     - jbj: teach headerGetExtension() to lookup extensions.
     - jbj: chain through new headerCompundFormats.
